# NavigAI-api

./: .dockerignore  .env  .env.aws  .env.gcp  .gitignore  Dockerfile  README.md  apprunner-ecr.json  apprunner.yaml  cloudbuild.yaml  deploy-ecr.ps1  deploy-ecr.sh  deploy-gcp.sh  ecs-task-definition.json  pyproject.toml  requirements.txt  settings.json  test_jwt.py  vercel.json
.do/: app.yaml
api/: index.py
src/: extensions.py  main.py  server.py
src/agents/: interview_agent.py  job_search_agent.py  mock_interview_agent.py  roadmap_agent.py
src/core/: logging_config.py  settings.py
src/db/: __init__.py  analytics.py  firebase.py  firebase_db.py  firebase_init.py  interview_reports.py  interview_sessions.py  job_searches.py  roadmaps.py  user_management.py
src/gui/: responsive_gui.py
src/lib/: audio_utils.py
src/models/: interview.py  job_search.py  mock_interview.py  roadmap.py  user.py
src/routes/: auth.py  health.py  interview.py  job_search.py  mock_interview.py  roadmap.py
src/services/: audio_analysis_service.py  gemini_service.py  interview_service.py  job_search_service.py  livekit_service.py  mock_interview_service.py  question_generation_service.py  report_generation_service.py  roadmap_service.py  thompson_sampling_service.py  tts_service.py
