[project]
name = "navigai-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Shashidhar Kundur",email = "shashidharkundur1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "firebase-admin (>=7.1.0,<8.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "quart (>=0.20.0,<0.21.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "quart-cors (>=0.8.0,<0.9.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "instructor (>=1.11.2,<2.0.0)",
    "generativeai (>=0.0.1,<0.0.2)",
    "google-generativeai (>=0.8.5,<0.9.0)"
]

[tool.poetry]
packages = [{include = "navigai_api", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']